--- a/index.html
+++ b/index.html
@@ -86,15 +86,17 @@ button svg {
   height: 28px;
 }
 
-/* ПОЛОСА С КАРТИНКОЙ ПОД ЗАГОЛОВКОМ */
+/* КАРТИНКА ПОД ЗАГОЛОВКОМ — ВСЯ ЦЕЛИКОМ, БЕЗ ОБРЕЗКИ */
 .image-strip {
   width: 100%;
-  height: 40vh;                 /* высота полосы, можно менять */
   margin-bottom: 20px;
-  background-image: url("fragment Sinagogue.png");
-  background-repeat: no-repeat;
-  background-size: cover;       /* заполняет весь экран по ширине */
-  background-position: right center; /* смещаем композицию вправо */
+  display: block;
+}
+
+.image-strip img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 /* ТЕКСТ */
@@ -139,9 +141,6 @@ button svg {
   button {
     align-self: flex-end;
   }
-  .image-strip {
-    height: 30vh; /* на телефоне чуть ниже, чтобы текст влез */
-  }
 }
 </style>
 </head>
@@ -165,8 +164,10 @@ button svg {
     </button>
   </div>
 
-  <!-- КАРТИНКА ПОД ЗАГОЛОВКОМ -->
-  <div class="image-strip"></div>
+  <!-- КАРТИНА ПОД ЗАГОЛОВКОМ -->
+  <div class="image-strip">
+    <img src="fragment Sinagogue.png" alt="У пошуках Підводної Синагоги">
+  </div>
 
   <div class="content">
     <p class="year">1941–1942</p>
@@ -183,7 +184,7 @@ button svg {
     <p>У 2000 році в Єрусалимі було завершено будівництво нової Белзської синагоги — однієї з найбільших і найзначущіших у світі. Будівля спроєктована в традиційному хасидському стилі з включенням архітектурних мотивів синагоги, втраченої в Белзі в роки Другої світової війни.</p>
 
     <p class="year">Кінець 2024 року</p>
-    <p>Роздуми про трагічну долю белзьких хасидів, спогади про бесіди з Леонідом Войцеховим, осмислення стрімко мінливого світу та його калейдоскопічного відображення в сучасному мистецтві породили в автора ідею створення незвичайного твору, що поєднує воєдино фрагменти історій і вигадок, можливого й неможливого, в єдиному просторі духовних образів. Образів тих цінностей, які ми творимо навколо себе, і тих, що вибудовуємо всередині себе.</p>
+    <p>Роздуми про трагічну долю белзьких хасидів, спогади про бесіди з Леонідом Войцеховом, осмислення стрімко мінливого світу та його калейдоскопічного відображення в сучасному мистецтві породили в автора ідею створення незвичайного твору, що поєднує воєдино фрагменти історій і вигадок, можливого й неможливого, в єдиному просторі духовних образів. Образів тих цінностей, які ми творимо навколо себе, і тих, що вибудовуємо всередині себе.</p>
 
     <p>За уважного погляду на картину можна помітити долоню Фатіми та зірку Давида. Хаотична зміна форм, характерна для нашої мінливої реальності, передана через мотиви, що відсилають до ікон сучасного мистецтва. Серед заростей ламінарії та силуетів глибоководних риб можна побачити декупажі Матісса, квадрат Малевича, проуни Лисицького, бляшанку Воргола, гарбуз Кусами, чоловічків Харінга та пікселі Мондріана.</p>
 
@@ -220,6 +221,7 @@ function initAudio() {
   }
 }
 
+// Низький голос кита
 function makeWhaleCall(type) {
   if (!audioCtx || !whaleSound.running) return;
 
@@ -289,6 +291,7 @@ function makeWhaleCall(type) {
   panner.positionX.linearRampToValueAtTime(endX, now + duration);
 }
 
+// Високий голос кита (безперервний з пульсацією)
 function startContinuousHighWhale() {
   if (!audioCtx || !whaleSound.running) return;
 
@@ -371,6 +374,7 @@ function startContinuousHighWhale() {
   pulsate(now);
 }
 
+// Дуже високий голос — хаотична, переривчаста трель
 function makeTrillSound() {
   if (!audioCtx || !whaleSound.running) return;
 
